ChangeLog of HGTector

== Version 0.2.2 (8/23/2017) ==

New features:
- Added an installation script "installer.sh".
- Adopted new NCBI standard, i.e., using accession instead of GI as sequence identifier.
- Modified the mechanism of databaser.py. Now it downloads both DNA and protein sequences.
- Replaced 'http' with 'https' in NCBI server URLs.
- Adopted the command-line interface of DIAMOND 0.8+.

Bug fixes:
- Reformatted all Perl and Python scripts.
- Reworded multiple screen prompts.
- Multiple trivial bug fixes.


== Incremental update (1/28/2017) ==
Bug fixes:
- Fixed a bug in databaser.py which incorrectly deals the case with subsampling off.


== Incremental update (11/6/2016) ==
New features:
- Added Python 3 support for databaser.py
Bug fixes:
- NCBI has changed the FTP site file system structure (see [notification](https://www.ncbi.nlm.nih.gov/news/08-30-2016-genomes-ftp-reorganization/)). So databaser.py was modified accordingly.


== Version 0.2.1 (2/2/2016) ==

New features:
- Optimized the process of self-alignment by DIAMOND and RAPSearch2. Significantly faster.
Results don't change.
- Added a smart decision-making process. If the user does not specify a proper grouping scenario,
the program will try to generate one.
- Changed the way of creating graphics.

Bug fixes:
- Disabled FTP passive mode in databaser.py.


== Version 0.2.0 (major upgrade) (10/25/2015) ==

Note:
- Major modification of the entire pipeline.

Structural change:
- Renamed blaster and summarizer as searcher and reporter, respectively.
- Removed filterer, taxonomer and validator
- Renamed input / output files and directories.
- Re-wrote searcher.
- Re-wrote the main program.
- Re-wrote the GUI.

New features:
- New script databaser.py to create a customized, taxonomically balanced BLAST database, which
significantly improves the efficiency and accuracy of HGT discovery, comparing to the
original nr.