@@ -1,15 +1,7 @@
 HGTector
-==========
-
-**Note: Instead of downloading the release, please git clone the master branch, which contains an important update in match with the new NCBI FTP site structure.**
-
-**Alternatively, please download a pre-constructed database from [here](https://u21438014.dl.dropboxusercontent.com/u/21438014/HGTector/stdb_20170128.tar.xz).**
+========
 
 A computational pipeline for genome-wide detection of putative horizontal gene transfer (HGT) events based on sequence homology search hit distribution statistics
-
-Latest release: [0.2.1](https://github.com/DittmarLab/HGTector/archive/0.2.2.zip)
-
-Last update: 2017-1-28
 
 Authors: Qiyun Zhu (<qiyunzhu@gmail.com>), Katharina Dittmar (<katharinad@gmail.com>)
 
@@ -17,7 +9,9 @@ Affiliation: Department of Biological Sciences, University at Buffalo, State Uni
 
 License: [BSD 2-clause](http://opensource.org/licenses/BSD-2-Clause).
 
-An article detailing the method and its performance on simulated and real genomic datasets can be found [here](http://www.biomedcentral.com/1471-2164/15/717):
+Download the latest release: [0.2.2](https://github.com/DittmarLab/HGTector/archive/0.2.2.zip), updated on 2017-8-23; and a standard [database](https://u21438014.dl.dropboxusercontent.com/u/21438014/HGTector/stdb_20170630.tar), updated on 2017-6-30.
+
+An article detailing the method and its performance on simulated and real genomic datasets can be found [here](https://bmcgenomics.biomedcentral.com/articles/10.1186/1471-2164-15-717):
 
 Zhu Q, Kosoy M, Dittmar K. HGTector: an automated method facilitating genome-wide discovery of putative horizontal gene transfers. *BMC Genomics*. 2014. 15:717.
 
@@ -25,4 +19,4 @@ Please visit our lab's [website](http://katharina-dittmar.squarespace.com/) for 
 
 Usage: Simply execute **perl HGTector.pl**, or, open **GUI.html** in a web browser to see a step-by-step wizard.
 
-Download [HGTector 0.2.1](https://github.com/DittmarLab/HGTector/archive/0.2.1.zip).
+Download [HGTector 0.2.2](https://github.com/DittmarLab/HGTector/archive/0.2.2.zip).
